- finishing overhauling the hook implementation - cleaned up to function more along the lines of polymers native listeners functionality, allowing a list of hooks to be configured on the component and initialized for event triggering - revised advanced hook sample to the latest working version

--- a/src/hence-demo.html
+++ b/src/hence-demo.html
@@ -3,7 +3,7 @@
 <dom-module id="hence-demo">
   <template>
     <input on-tap="clearError" value="{{callToAction.email::input}}" placeholder="email">
-    <button on-tap="eventCallToAction">Sign Me Up!</button>
+    <button on-tap="hook.callToAction">Sign Me Up!</button>
     <small class="error">{{emailError}}</small>
   </template>
 </dom-module>
